--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.575.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-grid-layout": "^2.2.2",
     "react-router-dom": "^7.1.0",
     "tailwind-merge": "^3.5.0",
     "zustand": "^5.0.2"
