--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,3 +16,17 @@ python-dotenv>=1.0.0
 httpx>=0.28.0
 pytest>=8.3.0
 pytest-asyncio>=0.25.0
+# Phase 2: Persistence
+sqlmodel>=0.0.22
+psycopg2-binary>=2.9.0
+langgraph-checkpoint-postgres>=2.0.0
+alembic>=1.14.0
+# Phase 3: Hybrid search
+rank-bm25>=0.2.2
+# Phase 4: Scalability
+redis>=5.0.0
+arq>=0.26.0
+# Phase 5: Evaluation
+ragas>=0.2.0
+# Phase 6: Coding tools
+docker>=7.0.0
